# aws-lc_22

./: .ninja_deps  .ninja_log  CMakeLists.txt
aws-lc-build/: .ninja_deps  .ninja_log  build.ninja
aws-lc-build/crypto/: mem_test  urandom_test
aws-lc-build/crypto/fipsmodule/: keccak1600-armv8.S
aws-lc-build/decrepit/: decrepit_test
aws-lc-build/ssl/: ssl_test
aws-lc-build/ssl/test/: bssl_shim
aws-lc-build/tool/: bssl
crypto/: cmake_install.cmake  mem_test  urandom_test
crypto/digest_extra/: digest_test.cc
crypto/fipsmodule/: CMakeLists.txt
crypto/fipsmodule/cpucap/: cpu_aarch64_apple.c  cpu_aarch64_fuchsia.c  cpu_aarch64_linux.c  cpu_aarch64_win.c  cpucap.c
crypto/fipsmodule/digest/: digests.c
crypto/fipsmodule/sha/: internal.h  keccak1600.c  sha3.c  sha3_test.cc  sha_test.cc
crypto/fipsmodule/sha/asm/: keccak1600-armv8.pl  keccak1600-x86_64.pl
decrepit/: cmake_install.cmake  decrepit_test
generated-src/ios-aarch64/crypto/fipsmodule/: keccak1600-armv8.S
generated-src/ios-arm/crypto/fipsmodule/: keccak1600-armv4.S
generated-src/linux-aarch64/crypto/fipsmodule/: keccak1600-armv8.S
generated-src/linux-arm/crypto/fipsmodule/: keccak1600-armv4.S
generated-src/linux-x86_64/crypto/fipsmodule/: keccak1600-x86_64.S
generated-src/mac-x86_64/crypto/fipsmodule/: keccak1600-x86_64.S
generated-src/win-aarch64/crypto/fipsmodule/: keccak1600-armv8.S
generated-src/win-x86_64/crypto/fipsmodule/: keccak1600-x86_64.asm
include/openssl/: arm_arch.h  base.h  digest.h  sha3.h
pq-crypto/: CMakeLists.txt  EVP_kem.c  EVP_kem.h  hello_test.cc  pq_crypto_test.cc
pq-crypto/cmake/: hello_test-config.cmake  pq-crypto-config.cmake
pq-crypto/sike_r3/: sikep434r3_ec_isogeny.c  sikep434r3_fpx.c  sikep434r3_kem.c  sikep434r3_sidh.c
ssl/: cmake_install.cmake  ssl_test
ssl/test/: bssl_shim
tool/: bssl  speed.cc
